# attngeom

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
attngeom/: __init__.py  core.py
examples/: clustering_example.py  quickstart.py
tests/: test_core.py
