[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attngeom"
version = "0.1.0"
description = "Attention-based geometric representation for data analysis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "宋梓铭", email = "15011462616@163.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Data Analysis",
]
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.21.0",
  "scipy>=1.7.0",
]

[project.urls]
"Homepage" = "https://github.com/jacksong-sourse/attngeom"
"Repository" = "https://github.com/jacksong-sourse/attngeom.git"

[tool.pytest.ini_options]
testpaths = ["tests"]
